--- a/structure/default/grails-app/conf/application.yml
+++ b/structure/default/grails-app/conf/application.yml
@@ -105,6 +105,7 @@ dataSource:
     password: ''
 
 environments:
+    # 開発環境の設定
     development:
         dataSource:
             dbCreate: create-drop
@@ -113,6 +114,7 @@ environments:
         dataSource:
             dbCreate: update
             url: jdbc:h2:mem:testDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+    # 本番環境の設定
     production:
         dataSource:
             dbCreate: none
